--- a/www/newmemo.html
+++ b/www/newmemo.html
@@ -109,7 +109,7 @@
 
 </div><!--content div end-->
 <div class="cena"><!--next button-->
-<button class="ui-btn butpc print" >SAVE AND PRINT</button>
+<!-- <button class="ui-btn butpc print" >SAVE AND PRINT</button> -->
 <!--  <a href="#" class="ui-btn ui-corner-all ui-shadow  butmmas" id="next1">NEXT</a><br> -->
 </div><!--next button end-->
 <br>
